--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -25,6 +25,18 @@ body {
   font-size: 24px;
   font-family: "Source Sans Pro", "sans-serif";
 }
+
+.container {
+  color: #545149;
+  background-color: #f4f1ec;
+  font-size: 24px;
+  font-family: "Source Sans Pro", "sans-serif";
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 90%;
+}
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
