--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -2,7 +2,7 @@
   background-color: #4056A1;
   height: 120px;
   width: 100%;
-  color: #ffffff;
+  color: #4056A1;
   position: fixed;
   top: 0;
   display: flex;
