--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -37,6 +37,17 @@ body {
   justify-content: center;
   width: 100%;
 }
-/*
- * Additional CSS can be defined below or in other CSS files, as per instructions
- */
+
+ @media only screen and (min-width:1024px) {
+
+  body {
+    margin-top: 5em;
+    display: flex;
+    align-content: space-evenly;
+  }
+
+  body .container {
+    width: 70%;
+    max-width: 1320px;
+  }
+}
