--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -34,7 +34,7 @@ textarea {
     background-color: #f4f1ec;
     font-family: "Source Sans Pro", sans-serif;
     margin-top: 10px;
-    height: 30px;
+    height: fit-content;
     width: 100%;
 }
 
